# dbird

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/sounds/: NOTICE.md  generate.py
leaderboard/: README.md  package-lock.json  package.json  wrangler.jsonc
leaderboard/migrations/: 0001_initial.sql
leaderboard/src/: index.js
leaderboard/test/: index.test.js
src/: audio.rs  cli.rs  game.rs  lib.rs  main.rs  online.rs  signals.rs  storage.rs  terminal.rs  theme.rs  ui.rs
