[package]
name = "dbird"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
description = "A fully playable terminal recreation of the classic Flappy Bird game"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback", "vorbis"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
