[package]
name = "dbird"
version = "1.0.1"
edition = "2024"
rust-version = "1.88"
description = "A fully playable terminal recreation of the classic Flappy Bird game"
license = "MIT"
repository = "https://github.com/leduftw/dbird"
readme = "README.md"
keywords = ["game", "terminal", "tui", "flappy-bird", "arcade"]
categories = ["games", "command-line-utilities"]
exclude = [".github/", ".gitignore"]

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback", "vorbis"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
