[package]
name = "dbird"
version = "1.2.0"
edition = "2024"
rust-version = "1.88"
description = "A fully playable terminal recreation of the classic Flappy Bird game"
license = "MIT"
repository = "https://github.com/leduftw/dbird"
readme = "README.md"
keywords = ["game", "terminal", "tui", "flappy-bird", "arcade"]
categories = ["games", "command-line-utilities"]
exclude = [".github/", ".gitignore", "leaderboard/"]

[dependencies]
crossterm = "0.29.0"
getrandom = "0.4.3"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback", "vorbis"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.3.0", features = ["json"] }
url = "2.5.8"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.18"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
